--- a/index.html
+++ b/index.html
@@ -139,10 +139,8 @@
                         document.createElement("canvas"),
 
                         [
-                          "Notice that while one attainment level appears to dominate certain regions, it doesn't ",
-                          "necessarily mean it represents the majority of the population. In fact, as ",
-                          "you explore most areas, you will find the predominant educational attainment makes up ",
-                          "just a fraction of the population due to the number of categories considered."
+                          "Notice that while one Household Income level appears to dominate certain regions, it doesn't ",
+                          "necessarily mean it represents the majority of the population."
                         ].join("")
                       ],
                       className: "esri-icon-pie-chart",
