--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         document.createElement("canvas"),
 
                         [
-                          "Notice that while one Household Income level appears to dominate certain regions, it doesn't ",
+                          "* Notice that while one Household Income level appears to dominate certain regions, it doesn't ",
                           "necessarily mean it represents the majority of the population."
                         ].join("")
                       ],
