--- a/scratch_2.html
+++ b/scratch_2.html
@@ -64,7 +64,7 @@
             // Load a web map in a 2D MapView
             const map = new WebMap({
                 portalItem: {
-                    id: "a6242f4879c144d8880214c460f36492"
+                    id: "59aeea7b9fce4a4ea490c8d30fbae6d3"
                 }
             });
 
@@ -139,9 +139,9 @@
                         document.createElement("canvas"),
 
                         [
-                          "Notice that while one attainment level appears to dominate certain regions, it doesn't ",
+                          "Notice that while one income level appears to dominate certain regions, it doesn't ",
                           "necessarily mean it represents the majority of the population. In fact, as ",
-                          "you explore most areas, you will find the predominant educational attainment makes up ",
+                          "you explore most areas, you will find the predominant income level makes up ",
                           "just a fraction of the population due to the number of categories considered."
                         ].join("")
                       ],
