--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             view.when(function() {
 
                 predominanceLayer = findLayerByTitle(
-                "Manhattan_CT_Update");
+                "Manhattan_CT");
               predominanceLayer.outFields = ["*"];
 
               view.whenLayerView(predominanceLayer).then(function(layerView) {
