--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             // Load a web map in a 2D MapView
             const map = new WebMap({
                 portalItem: {
-                    id: "59aeea7b9fce4a4ea490c8d30fbae6d3"
+                    id: "eeadec8cad524ad7bee172cda1a43596"
                 }
             });
 
@@ -98,7 +98,7 @@
             view.when(function() {
 
                 predominanceLayer = findLayerByTitle(
-                "Manhattan_CT");
+                "Manhattan_CT_cliped");
               predominanceLayer.outFields = ["*"];
 
               view.whenLayerView(predominanceLayer).then(function(layerView) {
